--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
-		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<!DOCTYPE web-app PUBLIC
+ "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+ "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-	<display-name>Works with Heroku</display-name>
-
-	<servlet>
-		<servlet-name>WorksWithHerokuServlet</servlet-name>
-		<servlet-class>works.buddy.samples.WorksWithHerokuServlet</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-		<servlet-name>WorksWithHerokuServlet</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
-
+<web-app>
+  <display-name>Archetype Created Web Application</display-name>
 </web-app>
