--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -15,6 +15,8 @@
         name: docker
         state: started
         enabled: yes
+    - name: install pip3
+        apt: name=python3-pip state=present
     - name: Install docker-py python module
       pip:
         name: docker-py
